--- a/new template/index.html
+++ b/new template/index.html
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">PP<span>.</span></a></h1>
+      <h1 class="logo"><a href="index.html">Price Prediction<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -50,10 +50,8 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="#cta">Predict</a></li>
           <li><a href="#team">Team</a></li>
-
-          <li><a href="#contact">Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -69,17 +67,17 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>WANT TO BUY BIKE OR CAR<span>.</span></h1>
-          <h2>BUT</h2>
-          <h2>WORRIED ABOUT PRIZE</h2>
-          <h2>HERE IT HELPS</h2>
+          <h1>PEOPLE TENDS TO PREDICT<span>,</span></h1>
+          <h2>AND FINALLY ALL YOUR VALUES</h2>
+          <h2>COMES TO THE POINT OF YOUR</h2>
+          <h2>UNPREDICTABILITY</h2>
         </div>
       </div>
 
       <div class="row mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
         <div class="col-xl-2 col-md-4 col-6">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line"></i>
+            <i class="ri-bar-chart-box-line" style="color:orange"></i>
             <h3><a href="">PREDICTION</a></h3>
           </div>
         </div>
@@ -100,20 +98,20 @@
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
-            <h3> A car price prediction has been a high interest research area, as it requires noticeable effort.</h3>
+            <h3> A car or a bike price prediction has been a high interest of research area, as it requires noticeable effort.</h3>
             <p class="font-italic">
-              it is common to lease a car or a bike  rather than buying it
-               outright.
+              it is common to lease a car or a bike rather than buying it
+              outright.
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i>  car and bike  price prediction involves expert knowledge, because price usually depends on many
-distinctive features and factors.</li>
+              <li><i class="ri-check-double-line"></i>  Car and Bike price prediction involves expert knowledge, because price usually depends on many
+               distinctive features and factors.</li>
               <li><i class="ri-check-double-line"></i>Different features like exterior color, door
-number, type of transmission, dimensions, safety, air
-condition , interior , whether it has navigation or not
-will also influence the car price.</li>
+               number, type of transmission, dimensions, safety, air
+               condition , interior , whether it has navigation or not
+               will also influence the car price.</li>
               <li><i class="ri-check-double-line"></i> Different features like exterior color,number of gear,
-will also influence the bike pricet nulla pariatur.</li>
+               will also influence the bike price.</li>
             </ul>
             <p>
               The main aim of our project is to predict the price of used cars and bikes.In this we are taking the user input in the user input we are asking the needs like first we are asking what you need car or bike.
@@ -161,38 +159,14 @@ will also influence the bike pricet nulla pariatur.</li>
       </div>
     </section><!-- End Features Section -->
 
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Services</h2>
-          <p>Check our Service</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Predict</a></h4>
-              <p>Want To Know The Price Of your Car or Bike</p>
-            </div>
-          </div>
-
-
-        </div>
-
-      </div>
-    </section><!-- End Services Section -->
-
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
       <div class="container" data-aos="zoom-in">
 
         <div class="text-center">
-          <h3>Call To Action</h3>
-          <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a class="cta-btn" href="#">Call To Action</a>
+          <h3>PRICE PREDICTION</h3>
+          <p>This website basically predicts the price of the old cars and bikes, below button will direct you to the prediction page. So go ahead and check yourself.</p>
+          <a class="cta-btn" href="#">Click To Predict Price</a>
         </div>
 
       </div>
@@ -202,7 +176,6 @@ will also influence the bike pricet nulla pariatur.</li>
     <!-- ======= Team Section ======= -->
     <section id="team" class="team">
       <div class="container" data-aos="fade-up">
-
         <div class="section-title">
           <h2>Team</h2>
           <p>Our Team</p>
@@ -210,56 +183,56 @@ will also influence the bike pricet nulla pariatur.</li>
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-7 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/team/1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/1.jpg" class="mx-auto rounded-circle img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href=""><i class="icofont-twitter" style="color:blue"></i></a>
+                  <a href=""><i class="icofont-facebook" style="color:blue"></i></a>
+                  <a href=""><i class="icofont-instagram" style="color: #FD1D1D"></i></a>
+                  <a href=""><i class="icofont-linkedin" style="color:blue"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>PURV H JEJA</h4>
-                <span>Lead Designer</span>
+                <h3>PURV H JEJA</h3>
+                <h4>Designer</h4>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-7 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="member-img">
-                <img src="assets/img/team/2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/2.jpg" class="mx-auto rounded-circle img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href=""><i class="icofont-twitter"style="color:blue"></i></a>
+                  <a href=""><i class="icofont-facebook"style="color:blue"></i></a>
+                  <a href=""><i class="icofont-instagram"style="color:#FD1D1D"></i></a>
+                  <a href=""><i class="icofont-linkedin"style="color:blue"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>PRAGYA SINGH</h4>
-                <span>Lead Marketer</span>
+                <h3>PRAGYA SINGH</h3>
+                <h4>Marketer</h4>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-4 col-md-7 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/team/3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/3.jpg" class="mx-auto rounded-circle img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href=""><i class="icofont-twitter"style="color:blue"></i></a>
+                  <a href=""><i class="icofont-facebook"style="color:blue"></i></a>
+                  <a href=""><i class="icofont-instagram"style="color:#FD1D1D"></i></a>
+                  <a href=""><i class="icofont-linkedin"style="color:blue"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>VAIBHAV RATHORE</h4>
-                <span>Lead Developer</span>
+                <h3>VAIBHAV RATHORE</h3>
+                <h4>Developer</h4>
               </div>
             </div>
           </div>
@@ -277,9 +250,10 @@ will also influence the bike pricet nulla pariatur.</li>
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
+            <h2>Under The Guidance Of</h2>
             <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
             <h3>ADITYA S K</h3>
-            <h4>Ceo &amp; Founder</h4>
+            <h4>CTO &amp; Director At Tequed Labs</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               Push yourself, because no one else is going to do it for you.
@@ -292,56 +266,6 @@ will also influence the bike pricet nulla pariatur.</li>
       </div>
     </section><!-- End Testimonials Section -->
 
-
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Contact</h2>
-          <p>Contact Us</p>
-        </div>
-
-
-
-
-
-          <div class="col-lg-8 mt-5 mt-lg-0">
-
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="form-row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                  <div class="validate"></div>
-                </div>
-                <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                  <div class="validate"></div>
-                </div>
-              </div>
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                <div class="validate"></div>
-              </div>
-              <div class="mb-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Contact Section -->
-
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -350,17 +274,9 @@ will also influence the bike pricet nulla pariatur.</li>
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6" style="color:grey">
             <div class="footer-info">
-              <h3>PP<span>.</span></h3>
-
-              <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-              </div>
+              <h3>Price Prediction<span>.</span></h3>
             </div>
           </div>
 
@@ -369,16 +285,11 @@ will also influence the bike pricet nulla pariatur.</li>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Predict</a></li>
             </ul>
           </div>
 
     <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>PP</span></strong>. All Rights Reserved
-      </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
