--- a/new template/index.html
+++ b/new template/index.html
@@ -68,9 +68,9 @@
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
           <h1>PEOPLE TENDS TO PREDICT<span>,</span></h1>
-          <h2>AND FINALLY ALL YOUR VALUES</h2>
-          <h2>COMES TO THE POINT OF YOUR</h2>
-          <h2>UNPREDICTABILITY</h2>
+          <h2>AND FINALLY WE ARE HERE</h2>
+          <h2>PREDICTING PRICES FOR YOU</h2>
+          <h2>FOR YOUR BUDGET FRIENDLY CARS OR BIKES</h2>
         </div>
       </div>
 
