--- a/pragya/index.html
+++ b/pragya/index.html
@@ -76,7 +76,7 @@
       </div>
 
       <div class="row mt-5 justify-content-center" data-aos="zoom-in" data-aos-delay="250">
-        <div class="col-xl-2 col-md-4 col-6">
+        <div class="col-xl"
           <div class="icon-box">
             <i class="ri-bar-chart-box-line"></i>
             <h3><a href="">PREDICTION</a></h3>
